@@ -17,8 +17,6 @@ import org.elasticsearch.common.util.concurrent.FutureUtils;
 
 import java.time.Clock;
 import java.util.Collection;
-import java.util.Collections;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
@@ -148,7 +146,7 @@ public class SchedulerEngine {
     }
 
     public Set<String> scheduledJobIds() {
-        return Collections.unmodifiableSet(new HashSet<>(schedules.keySet()));
+        return Set.copyOf(schedules.keySet());
     }
 
     public void add(Job job) {
